--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "resend": "^4.7.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
