--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.522.0",
     "motion": "^12.23.0",
     "next": "15.3.4",
+    "posthog-js": "^1.258.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
